--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-
+/* 
+const initialItems = [
+  { id: 1, description: "Passports", quantity: 2, packed: false },
+  { id: 2, description: "Socks", quantity: 12, packed: false },
+];
+*/
 
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
@@ -76,7 +81,7 @@ input {
   background-color: #5a3e2b;
   color: #ffebb3;
   padding: 4rem 0;
-
+ /* overflow: hidden; */
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -96,7 +101,7 @@ input {
 .list ul {
   list-style: none;
   width: 80%;
-  overflow: scroll;
+  overflow: none;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
